Init player method and cleaner level properties